FullQa New/src/objects/Partner_Marketing_Activity__c.object
<CustomObject>
    <description>Use by Avertek (Vendor) as a fully integrated summary object of partner campaign portal activities</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Martketing_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityScheduledDate__c</fullName>
        <label>Activity Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <description>Averetek field
Resource Name or Tactic Name</description>
        <label>Activity Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Averetek field
Document Type (Flyer, Guide, etc.)</description>
        <label>Activity Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bounces__c</fullName>
        <description>Averetek field</description>
        <label>Bounces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDM_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDM Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Martketing_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CampaignGroup__c</fullName>
        <description>Computed by Account / CDM</description>
        <formula>&quot;Hello World&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignGroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Partner_Martketing_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clicks__c</fullName>
        <description>Averetek field</description>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Partner_Martketing_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExecutionDate__c</fullName>
        <description>Averetek field</description>
        <label>ExecutionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExecutionID__c</fullName>
        <description>Unique ID from Averetek for the campaign execution</description>
        <externalId>true</externalId>
        <label>ExecutionID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <description>Averetek field
Powerpoint, Word, etc.</description>
        <label>File Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impersonated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Impersonated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Marketing_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landing_Page_URL__c</fullName>
        <label>Landing Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opens__c</fullName>
        <description>Averetek field</description>
        <label>Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Partner_Martketing_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Syndication_URL__c</fullName>
        <label>Partner Syndication URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PercentBounces__c</fullName>
        <formula>Bounces__c / Recipients__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%Bounces</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentClicks__c</fullName>
        <formula>Clicks__c / Recipients__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%Clicks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentUnsubscribes__c</fullName>
        <formula>Unsubscribes__c / Recipients__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%Unsubscribes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentsOpens__c</fullName>
        <formula>Opens__c / Recipients__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%Opens</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recipients__c</fullName>
        <description>Averetek field</description>
        <label>Recipients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Respondents__c</fullName>
        <description>Averetek field</description>
        <label>Respondents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL_to_Activity__c</fullName>
        <description>Averetek field
URL to asset in AMC</description>
        <label>URL to Activity</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unsubscribes__c</fullName>
        <description>Averetek field</description>
        <label>Unsubscribes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner Marketing Activity</label>
    <nameField>
        <label>Partner Marketing Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Marketing Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>